@@ -27,6 +27,7 @@ Version 1.3.3+svn:
    * ability to view a list of MP servers with the Join Game dialog
    * fixed blinking tooltips when clock is updated (bug #9209)
    * footsteps are now erased at the end of the unit's move
+   * reduced "sea sickness" effect when scrolling at accelerated speed
  * Miscellaneous and bugfixes
    * fix bug #4299: word wrap for menus with very long option strings
    * various bugfixes and code cleanups
